--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comments Fetcher</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        #comments {
+            margin-top: 20px;
+        }
+
+        .comment-card {
+            padding: 15px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            background: #f9f9f9;
+        }
+
+        .comment-card h4 {
+            margin: 0 0 5px 0;
+        }
+
+        #loading {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
+
+    <h2>📩 Fetch Comments</h2>
+
+    <button id="btn">Load Comments</button>
+    <p id="loading"></p>
+
+    <div id="comments"></div>
+
     <script src="script.js"></script>
+
 </body>
 </html>
